--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,10 @@ version = "0.2.0"
 [deps]
 StrideArraysCore = "7792a7ef-975c-4747-a70f-980b88e8d1da"
 
+[compat]
+julia = "1.6"
+StrideArraysCore = "0.4.0"
+
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
