--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,12 @@
 name = "Bumper"
 uuid = "8ce10254-0962-460f-a3d8-1f77fea1446e"
 authors = ["MasonProtter <mason.protter@icloud.com>"]
-version = "0.2.1"
+version = "0.3.0"
 
 [deps]
+MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
+Mmap = "a63ad114-7e13-5084-954f-fe012c677804"
+Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 StrideArraysCore = "7792a7ef-975c-4747-a70f-980b88e8d1da"
 
 [compat]
