--- a/Project.toml
+++ b/Project.toml
@@ -9,7 +9,7 @@ Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 StrideArraysCore = "7792a7ef-975c-4747-a70f-980b88e8d1da"
 
 [compat]
-StrideArraysCore = "0.3, 0.4"
+StrideArraysCore = "0.3, 0.4, 0.5"
 julia = "1.6"
 
 [extras]
