--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,11 @@
 name = "Bumper"
 uuid = "8ce10254-0962-460f-a3d8-1f77fea1446e"
 authors = ["MasonProtter <mason.protter@icloud.com>"]
-version = "0.4.1"
+version = "0.5.0"
 
 [deps]
 StrideArraysCore = "7792a7ef-975c-4747-a70f-980b88e8d1da"
+mimalloc_jll = "38cef826-3163-5c31-a333-3957420b3fb7"
 
 [compat]
 StrideArraysCore = "0.3, 0.4, 0.5"
