--- a/Project.toml
+++ b/Project.toml
@@ -4,9 +4,18 @@ authors = ["MasonProtter <mason.protter@icloud.com>"]
 version = "0.5.0"
 
 [deps]
+StaticCompiler = "81625895-6c0f-48fc-b932-11a18313743c"
+StaticTools = "86c06d3c-3f03-46de-9781-57580aa96d0a"
 StrideArraysCore = "7792a7ef-975c-4747-a70f-980b88e8d1da"
 
+[weakdeps]
+StaticCompiler = "81625895-6c0f-48fc-b932-11a18313743c"
+
+[extensions]
+StaticCompilerExt = "StaticCompiler"
+
 [compat]
+StaticCompiler = "0.5"
 StrideArraysCore = "0.3, 0.4, 0.5"
 julia = "1.6"
 
