--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Bumper"
 uuid = "8ce10254-0962-460f-a3d8-1f77fea1446e"
 authors = ["MasonProtter <mason.protter@icloud.com>"]
-version = "0.5.1"
+version = "0.5.2"
 
 [deps]
 StrideArraysCore = "7792a7ef-975c-4747-a70f-980b88e8d1da"
@@ -13,7 +13,7 @@ StaticCompiler = "81625895-6c0f-48fc-b932-11a18313743c"
 StaticCompilerExt = "StaticCompiler"
 
 [compat]
-StaticCompiler = "0.5"
+StaticCompiler = "0.5, 0.6"
 StrideArraysCore = "0.3, 0.4, 0.5"
 julia = "1.6"
 
