--- a/Project.toml
+++ b/Project.toml
@@ -4,10 +4,9 @@ authors = ["MasonProtter <mason.protter@icloud.com>"]
 version = "0.6.0"
 
 [deps]
-StrideArraysCore = "7792a7ef-975c-4747-a70f-980b88e8d1da"
+UnsafeArrays = "c4a57d5a-5b31-53a6-b365-19f8c011fbd6"
 
 [compat]
-StrideArraysCore = "0.3, 0.4, 0.5"
 julia = "1.6"
 
 [extras]
